fix(home): remove CTA and adjust spacing for banner

--- a/clients/web/src/containers/home/style.module.css
+++ b/clients/web/src/containers/home/style.module.css
@@ -1,4 +1,9 @@
 .spacer {
+  padding-top: 172px !important;
+
+  @media (max-width: 1023px) {
+    padding-top: 192px !important;
+  }
 }
 
 div.search {
